--- a/templates/base-landing.html
+++ b/templates/base-landing.html
@@ -17,10 +17,28 @@
         <link rel="stylesheet" href="{% static "vendor/google-fonts.css" %}">
         <style>
             body {
-                padding-top: 50px;
                 padding-bottom: 20px;
                 overflow-y: scroll;
                 font-family: 'Hind', sans-serif;
+                font-size: 16px;
+            }
+            .jumbotron {
+                background-color: #007711;
+                color: white;
+            }
+            .jumbotron h1 {
+                font-weight: bold;
+            }
+            h2 {
+                font-size: 22px;
+                font-weight: bold;
+            }
+            h3 {
+                font-size: 19px;
+                font-weight: bold;
+            }
+            label {
+                font-weight: normal;
             }
         </style>
         <link rel="stylesheet" href="{% static "vendor/bootstrap/css/bootstrap-theme.min.css" %}">
