--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,4 +1,5 @@
 {% extends "base-landing.html" %}
+{% load bootstrap3 %}
 
 {% block title %}
 GovReady Q
@@ -8,10 +9,79 @@ GovReady Q
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Welcome to GovReady Q</h1>
-        <p>We&rsquo;ll help you answer questions and produce a document.</p>
+        <h1>GovReady-Q</h1>
+        <p>Deliver cyber security compliance as fast as you ship code.</p>
       </div>
     </div>
 
-	{{ block.super }} 
+    <div class="container">
+        <p>GovReady-Q helps system integrators and small businesses programmatically generate and maintain their System Security Plan (SSP) and other compliance artifacts. GovReady-Q guides your team step-by-step through FISMA’s NIST Risk Management Framework Authorization and Accreditation (A&amp;A) with easy-to-use "compliance apps" that interact with you and each other to generate policies, plans, and evidence to impress your auditors.</p>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6" style="margin-bottom: 30px;">
+                <h2>Get your organization started with GovReady-Q</h2>
+                <form method="post">
+                    {% csrf_token %}
+                    <input type=hidden name=action value=neworg>
+                    {% if not request.user.is_authenticated %}
+                        <h3>About your organization</h3>
+                    {% endif %}
+                    {% bootstrap_form neworg_form %}
+                    {% if not request.user.is_authenticated %}
+                        <h3>About you</h3>
+                        {% bootstrap_form signup_form %}
+                    {% endif %}
+                    <p><button type="submit" class="btn btn-success">Next &raquo;</button></p>
+                </form>
+            </div>
+            <div class="col-sm-offset-1 col-sm-5">
+                <div class="well">
+                    {% if not request.user.is_authenticated %}
+                    <h2 style="margin-top: 0;">Have a {{domain}} account? Sign in.</h2>
+                    <form method="post">
+                        {% csrf_token %}
+                        <input type=hidden name=action value=login>
+                        {% bootstrap_form login_form %}
+                        <p><button type="submit" class="btn btn-success">Sign in &raquo;</button></p>
+                    </form>
+                    {% else %}
+                    <h2 style="margin-top: 0;">Your organizations</h2>
+                        {% if member_of_orgs %}
+                        <p>You are a member of the following organizations:</p>
+                        <ul style="padding-left: 1.33em">
+                            {% for org in member_of_orgs %}
+                                <li><a href="{{org.get_url}}">{{org}}</a></li>
+                            {% endfor %}
+                        </ul>
+                        <p>Once you go to your organization&rsquo;s homepage, you will need to log in again.</p>
+                        {% else %}
+                            <p>You are not a member of any organizations.</p>
+                        {% endif %}
+                        <form method="post">
+                            {% csrf_token %}
+                            <input type=hidden name=action value=logout>
+                            <p>Logged in as {{request.user}}. Not you? <a href="#" onclick="$(this).parents('form').submit(); return false;">Log out</a>.</p>
+                        </form>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {{ block.super }} 
+{% endblock %}
+
+{% block scripts %}
+<script>
+$('#id_name').on('keyup', function() {
+    var slug = $(this).val();
+    slug = slug.toLowerCase().replace(/[^a-z0-9--]+/g, "-").replace(/^-+/, "").replace(/-+$/, "");
+    $('#id_subdomain').val(slug);
+})
+{% if request.method == "POST" %}
+smooth_scroll_to($('input[name=action][value={{request.POST.action|escapejs}}]').parent('form'));
+{% endif %}
+</script>
 {% endblock %}
