change h1, h2 font to Lato and set better font sizes for h1, h2, h3

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,13 @@
                 color: #777;
               }
             .glyphicon-globe { color: #888; }
+            h1, h2 {
+              font-family: 'Lato', sans-serif;
+              font-weight: bold;
+            }
+              h1 { font-size: 44px; color: #444; }
+              h2 { font-size: 20px; }
+              h3 { font-size: 18px; }
             .btn { white-space: normal; font-size: inherit; }
             .btn.btn-sm { font-size: 12px; }
             footer { margin-top:60px;
