Update landing page description text

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,18 +10,22 @@ GovReady Q
     <div class="jumbotron">
       <div class="container">
         <h1>GovReady-Q</h1>
-        <p>Deliver cyber security compliance as fast as you ship code.</p>
+        <p>Apps to help teams build and operate secure and compliant IT systems.</p>
       </div>
     </div>
 
     <div class="container">
-        <p>GovReady-Q helps system integrators and small businesses programmatically generate and maintain their System Security Plan (SSP) and other compliance artifacts. GovReady-Q guides your team step-by-step through FISMA’s NIST Risk Management Framework Authorization and Accreditation (A&amp;A) with easy-to-use "compliance apps" that interact with you and each other to generate policies, plans, and evidence to impress your auditors.</p>
+        <p style="font-size: 14pt;">GovReady-Q is an open source, self-service portal to help teams build and operate compliant IT systems. GovReady-Q offers easy-to-use "compliance apps" that manage and generate documentation of your IT systems. Our vision is to make Governance, Risk and Compliance easy and pratical for small businesses, developers, managers, and others who are not security or compliance experts.</p>
+
+        <p style="font-size: 14pt;">GovReady-Q is in public beta and recommended for innovators and early adopters interested in furthering the platform's development.</p>
+        <p>&nbsp;</p>
+
     </div>
 
     <div class="container">
         <div class="row">
             <div class="col-sm-6" style="margin-bottom: 30px;">
-                <h2>Get your organization started with GovReady-Q</h2>
+                <h2>Get your organization started with GovReady</h2>
                 <form method="post">
                     {% csrf_token %}
                     <input type=hidden name=action value=neworg>
