promote the first line of a question prompt to be the <h1> of the question page rather than the question's title field

--- a/templates/question.html
+++ b/templates/question.html
@@ -80,7 +80,7 @@ label:hover .onhover { display: inline; }
       </div>
     {% endif %}
 
-    <h1>{{q.spec.title|safe}}</h1>
+    <h1>{{title|safe}}</h1>
 
     <div id="question">
         <form {% if not write_priv %}class="disabled"{% endif %} autocomplete="off">
