--- a/templates/base.html
+++ b/templates/base.html
@@ -141,6 +141,7 @@
                 {% if user.user_settings_task %}
                   <li><a href="{{user.user_settings_task.get_absolute_url}}">Account Settings</a></li>
                 {% endif %}
+                <li><a href="/api-keys">Your API Keys</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="{% url "account_logout" %}">Log Out</a></li>
               </ul>
