create a project/.../list page that shows all user-entered answers in an app, recursively

--- a/templates/project.html
+++ b/templates/project.html
@@ -173,6 +173,11 @@
       </button>
     {% endif %}
 
+    <button id="review-answers" class="btn btn-sm" onclick="window.location = '{{project.get_absolute_url|escapejs}}/list';">
+      <i class="glyphicon glyphicon-list"></i>
+      Review
+    </button>
+
     <a class="btn btn-sm" href="{{project.get_absolute_url}}/api">
       <i class="glyphicon glyphicon-sort"></i>
       API Docs
