add API documentation in Automation.md and fix some of the live self-documentation

--- a/templates/project-api.html
+++ b/templates/project-api.html
@@ -187,7 +187,7 @@ h2 { margin-top: 1.5em; }
             {% elif question.spec.type == "yesno" %}
               <p>Data type: string; either <code>yes</code> or <code>no</code>; or null.</p>
             {% elif question.spec.type == "integer" %}
-              <p>Data type: integer (or null).</p>
+              <p>Data type: number (or null).</p>
             {% elif question.spec.type == "real" %}
               <p>Data type: number (or null).</p>
             {% else %}
