add link to edit question in the popovers for answer metadata in template output

--- a/templates/project-list-answers.html
+++ b/templates/project-list-answers.html
@@ -92,7 +92,7 @@ h2 { margin-top: 1.5em; }
           <tr>
             <td>
               {{question.spec.title}}
-              <a href="{{section.task.get_absolute_url}}/question/{{question.key}}" style="margin-right: .5em; font-size: 65%;">
+              <a href="{{answer.taskanswer.get_absolute_url}}" style="margin-right: .5em; font-size: 65%;">
                 <span class="glyphicon glyphicon-pencil"></span>
               </a>
             </td>
